# Encryption

./: .gitignore  AppWindow.cpp  AppWindow.h  CMakeLists.txt  LICENSE  README.md  encryption_engine.cpp  encryption_engine.h  main.cpp  vcpkg.json
docs/: DEMO_SCRIPT.md  DEVPOST_SUBMISSION.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md
installer/: KASA.iss  README.md
resources/: KASA.rc  generate_icon.py  resource.h
tests/: encryption_engine_tests.cpp
